fix overflow in x direction on small devices

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -9,6 +9,13 @@ $hv-red: #a2382a;
 $at-red: #8e3125;
 
 
+html, body {
+    height: 100%;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+}
+
 .timer-type-header {
 	position: relative;
 	margin-top: 20px;
@@ -106,7 +113,7 @@ input:checked + .slider:before {
 }
 // progress bar end
 
-.timer-container {
+.timer-container, #startAndPasue {
 	width: 450px;
 }
 
@@ -116,12 +123,6 @@ input:checked + .slider:before {
 	}
 }
 
-html,body {
-    height: 100%;
-    width: 100%;
-    padding: 0;
-    margin: 0;
-}
 .wrapper {
     min-height: 100vh;
     display: flex;
